// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/3.x/range/descriptive Fixture: Full range getLabel: getLabel 1`] = `
Object {
  "en": Array [
    "Annotation 1",
  ],
}
`;

exports[`api/3.x/range/descriptive Fixture: Full range getMetadata: getMetadata 1`] = `
Array [
  Object {
    "label": Object {
      "en": Array [
        "Author",
      ],
    },
    "value": Object {
      "@none": Array [
        "Anne Author",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Published",
      ],
    },
    "value": Object {
      "en": Array [
        "Paris, circa 1400",
      ],
      "fr": Array [
        "Paris, environ 1400",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Notes",
      ],
    },
    "value": Object {
      "en": Array [
        "Text of note 1",
        "Text of note 2",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Source",
      ],
    },
    "value": Object {
      "@none": Array [
        "<span>From: <a href=\\"https://example.org/db/1.html\\">Some Collection</a></span>",
      ],
    },
  },
]
`;

exports[`api/3.x/range/descriptive Fixture: Full range getNavDate: getNavDate 1`] = `"300-01-01T00:00:00Z"`;

exports[`api/3.x/range/descriptive Fixture: Full range getPosterCanvas: getPosterCanvas 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Full range getPosterCanvasId: getPosterCanvasId 1`] = `
Object {
  "height": 1400,
  "id": "https://example.org/iiif/1/canvas/poster",
  "type": "Canvas",
  "width": 1200,
}
`;

exports[`api/3.x/range/descriptive Fixture: Full range getRequiredStatement: getRequiredStatement 1`] = `
Object {
  "label": Object {
    "en": Array [
      "Attribution",
    ],
  },
  "value": Object {
    "en": Array [
      "Provided by Example Organization",
    ],
  },
}
`;

exports[`api/3.x/range/descriptive Fixture: Full range getRights: getRights 1`] = `"https://creativecommons.org/licenses/by/4.0/"`;

exports[`api/3.x/range/descriptive Fixture: Full range getSummary: getSummary 1`] = `
Object {
  "en": Array [
    "Book 1, written be Anne Author, published in Paris around 1400.",
  ],
}
`;

exports[`api/3.x/range/descriptive Fixture: Full range getThumbnail: getThumbnail 1`] = `
Object {
  "id": "https://example.org/images/book1-page1/full/80,100/0/default.jpg",
  "service": Array [
    "https://example.org/images/book1-page1",
  ],
  "type": "Image",
}
`;

exports[`api/3.x/range/descriptive Fixture: Full range getThumbnailId: getThumbnailId 1`] = `"https://example.org/images/book1-page1/full/80,100/0/default.jpg"`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getLabel: getLabel 1`] = `
Object {
  "en": Array [
    "Table of Contents",
  ],
}
`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getMetadata: getMetadata 1`] = `Array []`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getNavDate: getNavDate 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getPosterCanvas: getPosterCanvas 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getPosterCanvasId: getPosterCanvasId 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getRequiredStatement: getRequiredStatement 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getRights: getRights 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getSummary: getSummary 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getThumbnail: getThumbnail 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range from IIIF spec getThumbnailId: getThumbnailId 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getLabel: getLabel 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getMetadata: getMetadata 1`] = `Array []`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getNavDate: getNavDate 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getPosterCanvas: getPosterCanvas 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getPosterCanvasId: getPosterCanvasId 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getRequiredStatement: getRequiredStatement 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getRights: getRights 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getSummary: getSummary 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getThumbnail: getThumbnail 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range minimal getThumbnailId: getThumbnailId 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getLabel: getLabel 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getMetadata: getMetadata 1`] = `Array []`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getNavDate: getNavDate 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getPosterCanvas: getPosterCanvas 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getPosterCanvasId: getPosterCanvasId 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getRequiredStatement: getRequiredStatement 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getRights: getRights 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getSummary: getSummary 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getThumbnail: getThumbnail 1`] = `null`;

exports[`api/3.x/range/descriptive Fixture: Range with start property getThumbnailId: getThumbnailId 1`] = `null`;
